# amoneyplan

./: .gitignore  .pre-commit-config.yaml  README.md  START_HERE.md  dev.sh  docker-compose.yml  noxfile.py  pom.xml  pyproject.toml  setup.py  test.sh
.cursor/rules/: brand.mdc  nextjs.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
amoneyplan/domain/: __init__.py  account.py  category.py  money.py  money_plan.py
backend/: .gitignore  Dockerfile  README.md  build.sh  noxfile.py  pyproject.toml  pytest.ini  setup.py  start.sh  test-requirements.txt
backend/amoneyplan/: settings.py
backend/amoneyplan/api/: schema.py
backend/amoneyplan/application/: money_plan_service.py
backend/amoneyplan/domain/: account.py  apps.py
backend/amoneyplan/domain/management/: __init__.py
backend/amoneyplan/domain/management/commands/: __init__.py  init_db.py
backend/src/: manage.py
backend/src/amoneyplan/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/src/amoneyplan/accounts/: auth.py  middleware.py  models.py  schema.py  tenancy.py  use_cases.py
backend/src/amoneyplan/accounts/migrations/: 0001_initial.py  0002_alter_accountmembership_invited_by_user.py
backend/src/amoneyplan/api/: __init__.py  apps.py  schema.py
backend/src/amoneyplan/api/management/commands/: export_schema.py
backend/src/amoneyplan/application/: __init__.py
backend/src/amoneyplan/common/: graphql.py  models.py  permissions.py  time.py  use_cases.py
backend/src/amoneyplan/domain/: __init__.py  account.py  entry.py  money.py  money_plan.py
backend/src/amoneyplan/domain/management/commands/: init_db.py
backend/src/amoneyplan/eventsourcing_runner/: apps.py
backend/src/amoneyplan/money_plans/: application.py  apps.py  models.py  repositories.py  use_cases.py
backend/src/amoneyplan/money_plans/management/: __init__.py
backend/src/amoneyplan/money_plans/management/commands/: __init__.py  init_db.py
backend/src/amoneyplan/money_plans/migrations/: 0001_initial.py  0002_account_notes.py  0003_plansharelink.py
backend/src/amoneyplan/users/: models.py  schema.py
backend/src/amoneyplan/users/migrations/: 0001_initial.py
backend/src/tests/: conftest.py
backend/src/tests/api/: conftest.py  test_account.py  test_account_management.py  test_auth.py  test_money_plan_commit_and_archive.py  test_money_plan_create.py  test_money_plan_query.py  test_notes.py  test_schema.py  test_schema_account.py  test_schema_notes.py  test_share_link.py  utils.py
backend/src/tests/domain/: test_money.py  test_money_plan.py
backend/src/tests/money_plans/: test_use_cases.py
backend/tests/domain/: test_entity.py  test_money_plan.py
dev/: backend.yaml  kind-config.yaml  logs.sh  namespace.yaml  postgres-pvc.yaml  setup.sh
dev/terraform/: amoneyplan-config  kubernetes.tf  main.tf  tf.sh  variables.tf
frontend/: .env.example  .gitignore  README.md  components.json  index.html  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: _not-found.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/accounts/: layout.tsx  page.tsx
frontend/app/new/: page.tsx
frontend/app/plans/: layout.tsx  page.tsx
frontend/components/: AddAccountModal.tsx  CustomToaster.tsx  EditBucketsModal.tsx  EmptyState.tsx  EmptyStateGraphics.tsx  Navbar.tsx  PaginationControls.tsx  PlanAccountCard.tsx  PlanAllocationProgress.tsx  PlanRemainingBalance.tsx  PostHogProvider.tsx  ScrollableAddAccountModal.tsx  ServiceWorkerEffect.tsx  StartPlanModal.tsx
frontend/components/ui/: custom-dialog.tsx  dialog.tsx  multi-progress.tsx  pagination.tsx  progress.tsx  select.tsx  textarea.tsx  toast.tsx  toaster.tsx
frontend/lib/: apollo-client.ts  graphqlClient.ts  utils.ts
frontend/lib/auth/: AuthContext.tsx
frontend/lib/constants/: bucketCategories.ts
frontend/lib/graphql/: operations.ts
frontend/lib/hooks/: useAccounts.ts  useAccountsPaginated.ts  usePagination.ts  usePlans.ts  usePlansUrlPaginated.ts  useToast.ts  useUrlPagination.ts
frontend/lib/utils/: format.ts
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: App.vue  main.ts  middleware.ts  style.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AccountCard.vue  AddAccountModal.vue  ConfirmDialog.vue  CopyFromSelect.vue  CreatePlanModal.tsx  EditAccountModal.vue  EditAccountNotesModal.vue  EditPlanNotesModal.vue  GoogleAuthButton.vue  GoogleAuthCallback.vue  LoginForm.vue  MoneyPlanCard.vue  PageHeader.vue  PlanDate.vue  RegisterForm.vue  StartPlanDialog.vue  StartPlanModal.tsx
frontend/types/: next-auth.d.ts
infra_dev/: cleanup.sh  kind-config.yaml  postgres-config.yaml  postgres.yaml
infra_dev/terraform/: .terraform.tfstate.lock.info  kubernetes.tf  main.tf  storage.tf  terraform.tfvars.template  tf.sh
tests/domain/: test_account.py  test_money_plan.py
(+46 files in other folders)
